# domain.cards

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: cross-compile.yml  docker-build-push.yml
resources/: membership.json
src/: app_model.rs  app_router.rs  lib.rs  main.rs  membership_model.rs  schema.rs  statistics_model.rs
templates/: base.html  index.html  join.html  join_us.html
templates/assets/css/: main.css  tailwind.css
