[package]
build = "src/build.rs"
edition = "2021"
name = "domaincards"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
askama = "0.11.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.21.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6.1"
diesel = { version = "2.0.0-rc.0", features = [
    "bigdecimal",
    "chrono",
    "r2d2",
    "sqlite",
] }
diesel_migrations = "2.0.0-rc.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
r-cache = "0.4.4"
rand = "0.8.5"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"

[dependencies.libsqlite3-sys]
# https://github.com/diesel-rs/diesel/issues/2943
features = ["bundled"]
version = ">=0.17.2, <0.25.0"
